packages/kit/test/apps/basics/src/routes/errors/load-error-page-options/+layout.js
// disables csr for the error page
export const csr = false;
